--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "db-push": "drizzle-kit push --config=drizzle.config.ts"
   },
   "dependencies": {
+    "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@t3-oss/env-nextjs": "^0.10.1",
     "drizzle-orm": "^0.31.2",
+    "lucia": "^3.2.0",
     "next": "14.2.4",
+    "pg": "^8.12.0",
     "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
@@ -20,6 +23,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pg": "^8.11.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "drizzle-kit": "^0.22.7",
